# pycodestyle_magic

./: .gitignore  LICENSE  README.md  pycodestyle_magic.py  pyproject.toml  setup.py
.ipynb_checkpoints/: README-checkpoint.md  pycodestyle_magic-checkpoint.py
notebook/: example flake8_magic.ipynb  example pycodestyle_magic.ipynb
notebook/.ipynb_checkpoints/: example pycodestyle_magic-checkpoint.ipynb
tests/: test_flake8_magic.py  test_pycodestyle_magic.py
